# QuantumTools

./: .gitignore  README.md  pyproject.toml
jupyter_notebooks/: 1. PauliwordOp.ipynb  2. Hamiltonian.ipynb
qtools/: tapering.py
quantumtools/: Hamiltonian.py  __init__.py  converter.py  exceptions.py  symplectic_form.py  tapering.py  variational.py
quantumtools/converter/: __init__.py  converter.py
quantumtools/evolution/: decomposition.py  gate_library.py  variational_optimization.py
tests/: test_qham_converter.py  test_tapering.py
tests/molecules/: H2.xyz  water.xyz
