[tool.poetry]
name = "QuantumTools"
version = "0.0.1"
description = "Random useful tools for chemistry related quatum computing."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^0.32.1"
openfermion = "^1.2.0"
PennyLane = "^0.19.1"
qiskit-nature = "^0.2.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
mypy = "^0.910"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
pytest = "^6.2.5"
pyscf = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3